--- a/src/App.css
+++ b/src/App.css
@@ -98,19 +98,19 @@ h3 {
 
 /* button class */
 
-.learn-more-btn {
-  background-color: blueviolet !important;
-  font-size: 18px !important;
+/* .learn-more-btn {
+  background-color: rgb(216, 15, 15) !important;
+  font-size: 28px !important;
   font-weight: 700 !important;
   color: whitesmoke !important;
   padding: 12px 29px !important;
   border-radius: 10px !important;
-  border: 2px solid blueviolet !important;
+  border: 2px solid rgb(199, 31, 64) !important;
   box-shadow: 0 10px 20px rgb(0 0 0 / 10%) !important;
   display: inline-block !important;
   text-decoration: none !important;
   transition: 0.7s !important;
-}
+} */
 
 .brand_wrapper {
   padding: 100px 0;
